updates to catalog: linage, search, table stats (new), views
